--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "angular-ui-router": "^0.3.1",
-    "hapi": "~7.5.0",
+    "hapi": "^7.5.3",
     "path": "^0.4.9"
   },
   "devDependencies": {
